# sisyphus-client

./: .gitignore  README.md  client.py  modules.toml  pyproject.toml  test.json
app/: config.py  exceptions.py  heartbeat.py  tasks.py
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.arch  docker-compose.alpine.yaml  docker-compose.arch.yaml  docker-compose.debian copy.yml  docker-compose.debian.yaml  docker-compose.yaml  docker-compose.yml
modules/: base.py  cleanup.py  ffmpeg.py  handbrake.py  matroska.py  mkvextract.py  mkvmerge.py
modules/schema/: cleanup.schema.json
