[tool.poetry]
name = "sisyphus-client"
version = "1.5.6"
description = ""
authors = ["JamesTheBard <jamesthebard@gmail.com>"]
# readme = "README.md"
packages = [
    { include = "client.py" },
    { include = "app" }
]
include = [
    "schema/cleanup.schema.json",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-box = "^7.1.1"
jsonschema = "^4.19.0"
loguru = "^0.7.2"
sisyphus-ffmpeg = { git = "https://github.com/JamesTheBard/sisyphus-ffmpeg.git", rev = "v1.1.0" }
sisyphus-matroska = { git = "https://github.com/JamesTheBard/sisyphus-matroska.git", rev = "v1.0.4" }
tzdata = "^2023.3"
sisyphus-handbrake = {git = "https://github.com/JamesTheBard/sisyphus-handbrake.git", rev = "v1.0.2"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.client.modules.enabled]
ffmpeg     = "modules.ffmpeg.Ffmpeg"
handbrake  = "modules.handbrake.Handbrake"
mkvmerge   = "modules.mkvmerge.Mkvmerge"
mkvextract = "modules.mkvextract.Mkvextract"
cleanup    = "modules.cleanup.Cleanup"
